--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -125,12 +125,21 @@ h3 {
   img {
     width: 100%;
     height: auto;
+    max-width: 100%;
   }
 
   figcaption {
     font-size: 0.8em;
     color: #666;
     text-align: center;
+  }
+
+  figure {
+    video {
+      width: 100%;
+      height: auto;
+      max-width: 100%;
+    }
   }
 }
 
@@ -186,7 +195,7 @@ h3 {
 
 button {
   &.skip {
-    margin: 20px auto 0;
+    margin: 0px auto 0;
     font-size: 1.5rem;
   }
 }
